# zoomcamp-mlops-2025-final-project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  EVALUATION.md  Makefile  README.md  pyproject.toml
.claude/docs/: architectural_patterns.md
.github/workflows/: deploy.yml  destroy.yml
app/: main.py
app/adapters/dataset_retriever/: ohlcv.py
app/adapters/preprocessors/: __init__.py  techinical_indicator_enricher.py
app/adapters/split_strategies/: __init__.py  out_of_time.py
app/adapters/target_builders/: __init__.py  tp_sl.py
app/adapters/trainers/: __init__.py  sklearn_trainer.py
app/dataset_retriever/: __init__.py  ohlcv.py
app/domain/ports/: __init__.py  dataset_retriever.py  preprocessor.py  split_strategy.py  target_builder.py  trainer.py
app/domain/services/: evaluation_service.py  inference_service.py  preprocessing_service.py  training_service.py
app/entrypoints/command_line/: run_local.py
app/entrypoints/sagemaker/: evaluate.py  inference.py  preprocessing.py  train.py
app/helpers/: logger.py
app/preprocessors/: __init__.py  techinical_indicator_enricher.py
app/split_strategies/: out_of_time.py
app/target_builders/: tp_sl.py
app/trainers/: __init__.py  sklearn_trainer.py
infra/: DEPLOYMENT.md  Makefile  README.md  locals.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/model-deployment/: endpoint.tf  outputs.tf  variables.tf
infra/model-tracking/: experiments.tf  model-registry.tf  outputs.tf  variables.tf
infra/model-training/: outputs.tf  pipeline.tf  variables.tf
infra/shared-resources/: outputs.tf  pipeline-code-upload.tf  policies.tf  roles.tf  s3.tf  variables.tf
notebooks/: eda.ipynb
scripts/: test_sagemaker_endpoint.sh
tests/: README.md  conftest.py
tests/adapters/: __init__.py  test_ohlcv_dataset_retriever.py  test_out_of_time_split_strategy.py  test_sklearn_trainer.py  test_technical_indicator_enricher.py  test_tp_sl_target_builder.py
