[project]
name = "zoomcamp-mlops-2025-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.4.95",
    "dotenv>=0.9.9",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.6.0",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "mypy>=1.17.0",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
]

[tool.mypy]
strict = true
disallow_any_generics = false
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true

[tool.flake8]
max-line-length = 99
ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".tox/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
